assets/css/style.css
/* ... */
.btn-link-2 {
	display: inline-block;
	height: 50px;
	margin: 0 5px;
	padding: 0 40px;
	background: #444;
	background: rgba(0, 0, 0, 0.3);
	border: 0;
	font-size: 15px;
    font-weight: 300;
    line-height: 48px;
    color: #fff;
    text-transform: uppercase;
    -moz-border-radius: 40px; -webkit-border-radius: 40px; border-radius: 40px;
    transition: all .3s;
}
.btn-link-2:hover, .btn-link-2:focus, .btn-link-2:active, .btn-link-2:active:focus,
.btn-link-2.btn-primary:not(:disabled):not(.disabled):active,
.btn-link-2.btn-primary:not(:disabled):not(.disabled):active:focus {
	outline: 0; opacity: 0.6; background: rgba(0, 0, 0, 0.3); box-shadow: none; color: #fff;
}


/***** Divider *****/

.divider-1 span {
	display: inline-block;
	width: 200px;
	border-bottom: 1px dotted #aaa;
}


/***** Top menu *****/

.navbar {
	background: #444;
	-o-transition: all .6s; -moz-transition: all .6s; -webkit-transition: all .6s; -ms-transition: all .6s; transition: all .6s;
	backface-visibility: hidden;
}
.navbar.navbar-no-bg { background: #444; background: rgba(0, 0, 0, 0.2); }

.navbar-dark .navbar-nav { font-size: 15px; color: #fff; text-transform: uppercase; }
.navbar-dark .navbar-nav .nav-link { color: #fff; color: rgba(255, 255, 255, 0.8); }
.navbar-dark .navbar-nav .nav-link:hover { color: #fff; }
.navbar-dark .navbar-nav .nav-link:focus { color: #fff; outline: 0; }

.navbar-expand-md .navbar-nav .nav-link { padding-left: 1rem; padding-right: 1rem; }

.navbar-dark .navbar-text a { margin: 0 8px; font-size: 26px; color: #fff; color: rgba(255, 255, 255, 0.8); }
.navbar-dark .navbar-text a:hover, 
.navbar-dark .navbar-text a:focus { color: #fff; }


/***** Top content *****/

.inner-bg {
    padding: 100px 0;
}

.top-content .text {
	color: #fff;
}

.top-content .text .logo {
	padding-bottom: 40px;
}

.top-content .text .logo a {
	display: inline-block;
	width: 130px;
	height: 69px;
	background: url(../img/logo.png) center center no-repeat;
}

.top-content .text h1 {
	margin-top: 25px;
	color: #fff;
}

.top-content .description {
	margin: 30px 0 10px 0;
}

.top-content .description p { opacity: 0.8; }

.top-content .top-big-link {
	margin-top: 45px;
}


/***** Services *****/

.services-box {
	padding-top: 30px;
	text-align: left;
}

.services-box .services-box-icon {
	width: 80px;
	height: 80px;
	margin: 0 auto;
	
	background: #ff8a38; /* Old browsers */
	background: -moz-linear-gradient(top,  #ffb24b 0%, #ff8a38 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffb24b), color-stop(100%,#ff8a38)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #ffb24b 0%,#ff8a38 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #ffb24b 0%,#ff8a38 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #ffb24b 0%,#ff8a38 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #ffb24b 0%,#ff8a38 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb24b', endColorstr='#ff8a38',GradientType=0 ); /* IE6-9 */

    font-size: 40px;
    color: #fff;
    line-height: 80px;
    text-align: center;
    -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%;
    -o-transition: all .6s; -moz-transition: all .6s; -webkit-transition: all .6s; -ms-transition: all .6s; transition: all .6s;
}

.services-box h3 {
	margin-top: 0;
	padding: 0 0 10px 0;
}


/***** Great support *****/

.great-support-container {
	padding-bottom: 0;
	overflow: hidden;
}

.great-support-box {
	margin-top: 30px;
	margin-bottom: 70px;
}

.great-support-box-text {
	margin-top: 40px;
	padding-left: 30px;
	overflow: hidden;
	text-align: left;
}
.great-support-box-text:first-child { margin-top: 20px; }

.great-support-box-text-left {
	padding-left: 0;
	padding-right: 30px;
}

.great-support-box-text h3 {
	margin-top: 0;
}

.great-support-box-text .medium-paragraph {
	margin-top: 20px;
	margin-bottom: 20px;
}

.great-support-box-phone {
	margin-bottom: 0;
}

.great-support-box-phone img {
	margin-bottom: -300px;
}


/***** More services *****/

.more-services-box {
	margin-top: 30px;
	text-align: left;
}

.more-services-box .more-services-box-icon {
	width: 60px;
	height: 60px;
	margin: 0 auto;
	
	background: #ff8a38; /* Old browsers */
	background: -moz-linear-gradient(top,  #ffb24b 0%, #ff8a38 100%); /* FF3.6+ */
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffb24b), color-stop(100%,#ff8a38)); /* Chrome,Safari4+ */
	background: -webkit-linear-gradient(top,  #ffb24b 0%,#ff8a38 100%); /* Chrome10+,Safari5.1+ */
	background: -o-linear-gradient(top,  #ffb24b 0%,#ff8a38 100%); /* Opera 11.10+ */
	background: -ms-linear-gradient(top,  #ffb24b 0%,#ff8a38 100%); /* IE10+ */
	background: linear-gradient(to bottom,  #ffb24b 0%,#ff8a38 100%); /* W3C */
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffb24b', endColorstr='#ff8a38',GradientType=0 ); /* IE6-9 */
	
    font-size: 28px;
    color: #fff;
    line-height: 60px;
    text-align: center;
    -moz-border-radius: 50%; -webkit-border-radius: 50%; border-radius: 50%;
}

.more-services-box h3 {
	margin-top: 0;
	padding: 0 0 10px 0;
}


/***** Call to action *****/

.call-to-action-container .section-bottom-button {
	padding-top: 30px;
}


/***** Portfolio *****/

.portfolio-box {
	padding-top: 30px;
	text-align: left;
}

.portfolio-box-image {
	overflow: hidden;
}

.portfolio-box-image img {
	-o-transition: all .8s; -moz-transition: all .8s; -webkit-transition: all .8s; -ms-transition: all .8s; transition: all .8s;
}

.portfolio-box-image:hover img {
	-o-transform: scale(1.25); -moz-transform: scale(1.25); -webkit-transform: scale(1.25); -ms-transform: scale(1.25); transform: scale(1.25);
}

.portfolio-box h3 {
	margin-top: 30px;
}
.portfolio-box h3 a { color: #555; }
.portfolio-box h3 a:hover, .portfolio-box h3 a:focus { color: #ff8a38; }
/* ... */

